--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "gatsby-transformer-sharp": "^5.6.0",
     "gh-pages": "^5.0.0",
     "html-react-parser": "^3.0.9",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-moment": "^1.1.3",
     "react-svg": "^16.1.15",
     "sass": "^1.58.3",
     "swiper": "^9.1.0"
