--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
     "gatsby": "^5.6.1",
     "gatsby-plugin-image": "^3.6.0",
@@ -40,6 +41,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-moment": "^1.1.3",
