--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-moment": "^1.1.3",
+    "react-responsive": "^10.0.1",
     "react-svg": "^16.1.15",
     "sass": "^1.58.3",
     "swiper": "^9.1.0"
