--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
     "gatsby": "^5.6.1",
+    "gatsby-plugin-htaccess": "^1.4.0",
     "gatsby-plugin-image": "^3.6.0",
     "gatsby-plugin-manifest": "^5.6.0",
     "gatsby-plugin-mdx": "^5.10.0",
     "gatsby-plugin-page-creator": "^5.10.0",
     "gatsby-plugin-react-helmet": "^6.8.0",
     "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sass": "^6.6.0",
     "gatsby-plugin-sharp": "^5.6.0",
-    "gatsby-plugin-sitemap": "^6.6.0",
+    "gatsby-plugin-sitemap": "^6.15.0",
     "gatsby-plugin-svgr-loader": "^0.1.0",
     "gatsby-plugin-yandex-metrika": "^2.5.0",
     "gatsby-source-filesystem": "^5.6.0",
